--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="index.html">Inicio</a>
             <a href="exposiciones.html">Exposiciones</a>
             <a href="contacto.html">Contacto</a>
-            <a href="registrarse.html">Registrarse</a>
+            <a href="registro.html">Registrarse</a>
             <a href="inicio sesion.html">Iniciar Sesion</a>
         </nav>
         <section class="textos-header">
