--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,40 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2? family = Crimson + Texto: ital @ 1 & display = swap " rel=" stylesheet ">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#error").hide();
+            $("#formulario").submit(function() {
+                var mensaje = "";
+
+                if ($("#numero").val().trim().length == 0) {
+                    mensaje = "Danos tu numero de contacto";
+                }
+                if ($("#correo").val().trim().length == 0) {
+                    mensaje = "Debes ingresar un correo";
+                }
+                if ($("#nombre").val().trim().length == 0) {
+                    mensaje = "Ingresa tu nombre por favor";
+                }
+                if ($("#idea").val().trim().length == 0) {
+                    mensaje = "Debes describir tu idea";
+                }
+                if ($("#tipo").val().trim().length == 0) {
+                    mensaje = "Debes ingresar el tipo de arte";
+                }
+                if (mensaje != "") {
+                    $("#error").html(mensaje);
+                    $("#error").show();
+                    event.preventDefault();
+                }
+            })
+        })
+    </script>
 </head>
 
 <body>
@@ -17,7 +51,7 @@
             <a href="index.html">Inicio</a>
             <a href="exposiciones.html">Exposiciones</a>
             <a href="contacto.html">Contacto</a>
-            <a href="registrarse.html">Registrarse</a>
+            <a href="registro.html">Registrarse</a>
             <a href="inicio sesion.html">Iniciar Sesion</a>
         </nav>
         <section class="textos-header">
@@ -26,61 +60,41 @@
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: #FDCA40;"></path>
+                    style="stroke: none; fill: #FFF;"></path>
             </svg></div>
     </header>
 
     <!--MainPagina-->
 
-    <section class="row">
-        <article class="border mt-5 col-12 col-md-12 col-lg-6 col-xl-6">
-            <!--Formulario Contacto-->
-            <h1 class="text-center">Contactanos! </h1>
-            <form action="" method="post" class=" col-12 col-md-12 col-lg-12 col-xl-12">
-                <fieldset>
-                    <div class="cont1">
-
-                        <br>
-                        <br>
-                        <br>
-                        <label class="m-1" for="mail">Tipo de arte que deseas:</label>
-                        <input class="ml-3" type="text" id="arte" name="arte" placeholder=" Ej. Orfebreria, Pintura artistica..." size="40" required="required">
-                        <br>
-                        <br>
-                        <label class="m-1" for="nombre">Idea de proyecto que deseas:</label>
-                        <input class="ml-1" type="text" id="idea" name="idea" placeholder="Cuentanos en breves palabras tu idea" size="30" required="required">
-                        <br>
-                        <br>
-                        <label class="m-1" for="nombre">Ingresa tus datos para contactarnos contigo:</label>
-                        <input class="ml-1" type="text" id="nombre" name="nombre" placeholder="Nombre completo" size="30" required="required">
-                        <input class="ml-1" type="text" id="correo" name="correo" placeholder="Correo electrónico" size="30" required="required">
-                        <input class="ml-1" type="text" id="numero" name="numero" placeholder="Número de contacto" size="30" required="required">
-                        <br>
-                        <br>
-                        <br>
-                    </div>
-                </fieldset>
-
+    <div class="container">
+        <div class="row">
+            <form method="post" action="procesar.php" id="formulario">
+                <h1 class="text-center">Contactanos! </h1>
                 <br>
-                <div id="botones" class="mb-2">
-                    <input class="btn btn-outline-success" type="submit" value="Enviar">
-                    <input class="boton2 btn btn-outline-danger " type="reset" value="Borrar">
+                <div class="form-group">
+                    <label for="tipo">Tipo de arte que deseas: </label>
+                    <input type="tipo" class="form-control" id="tipo" name="tipo" placeholder="Orfebreria, Pintura, Fotografía...">
                 </div>
+                <div class="form-group">
+                    <label for="idea">Idea de proyecto: </label>
+                    <input type="idea" class="form-control" id="idea" name="idea" placeholder="Danos una breve descripción de tu idea de proyecto">
+                </div>
+                <div>
+                    <label for="datos">Ingresa tus datos para contactarnos contigo:</label>
+                    <input class="ml-1" type="nombre" id="nombre" name="nombre" placeholder="Nombre completo" size="30">
+                    <input class="ml-1" type="correo" id="correo" name="correo" placeholder="Correo electrónico" size="30">
+                    <input class="ml-1" type="numero" id="numero" name="numero" placeholder="Número de contacto" size="30">
+                </div>
+                <br>
+                <br>
 
+                <input type="submit" class="btn btn-danger" id="enviar" value="Enviar">
+                <input type="reset" class="btn btn-primary" id="limpiar" value="Empezar denuevo">
+                <div id="error" class="alert alert-danger" role="alert"></div>
             </form>
-        </article>
-
-        <!--Fin Main Pagina-->
-        <!--Footer Pagina-->
-
-        <div class="container-fluid">
-            <footer class="row">
-
-                <div class="bg-dark text-white text-center col-12 py-5">
-
-                </div>
-            </footer>
         </div>
+    </div>
+
 </body>
 
 </html>
