--- a/registrarse.html
+++ b/registrarse.html
@@ -2,17 +2,51 @@
 <html lang="en">
 
 <head>
-    <title>registro</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2? family = Crimson + Texto: ital @ 1 & display = swap " rel=" stylesheet ">
+    <title>Registro</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#error").hide();
+            $("#formulario").submit(function() {
+                var mensaje = "";
+
+                if ($("#comentario").val().trim().length == 0) {
+                    mensaje = "Escribenos en breves palabras algo de tus intereses";
+                }
+                if ($("#telefono").val().trim().length == 0) {
+                    mensaje = "El telefono está en blanco";
+                }
+                if ($("#contraseña").val().trim().length == 0) {
+                    mensaje = "la contraseña está en blanco";
+                }
+                if ($("#email").val().trim().length == 0) {
+                    mensaje = "El mail está en blanco";
+                }
+                if ($("#nombre").val().trim().length == 0) {
+                    mensaje = "El nombre está en blanco";
+                }
+                if (mensaje != "") {
+                    $("#error").html(mensaje);
+                    $("#error").show();
+                    event.preventDefault();
+                }
+            })
+        })
+    </script>
+
 </head>
 
 <body>
-
-
     <header>
         <nav>
             <a href="index.html">Inicio</a>
@@ -27,64 +61,91 @@
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: #FDCA40;"></path>
+                    style="stroke: none; fill: #fff;"></path>
             </svg></div>
     </header>
 
-
-    <!--MainPagina-->
-
-    <section class="row">
-        <article class="border mt-5 col-12 col-md-12 col-lg-6 col-xl-6">
-            <!--Formulario Contacto-->
-            <h1 class="text-center">Formulario registro </h1>
-            <form action="" method="post" class=" col-12 col-md-12 col-lg-12 col-xl-12">
-                <fieldset>
-                    <div class="cont1">
-                        <br>
-                        <label class="m-1" for="nombre">Nombre y apellido :</label>
-                        <input class="ml-2" type="text" id="nombre" name="nombre" placeholder=" Nombres" size="30" required="required">
-                        <br>
-                        <br>
-                        <label class="m-1" for="nombre">contraseña:</label>
-                        <input class="ml-1" type="text" id="contraseña" name="contraseña" placeholder="contraseña" size="30" required="required">
-                        <br>
-                        <br>
-                        <label class="m-1" for="mail">Correo:</label>
-                        <input class="ml-3" type="email" id="mail" name="mail" placeholder=" email@ejemplo.com" size="40" required="required" autofocus pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}">
-                        <br>
-                        <br>
-                        <label class="m-1" for="telefono">Número de teléfono:</label>
-                        <input type="tel" id="telefono" name="telefono" required="required" placeholder="Teléfono 9 dígitos" pattern="[0-9]{9}">
-                        <br>
-                        <br>
-
-                        <label class="m-1" for="text">Descripcion Mensaje:</label>
-                        <br>
-                        <textarea name="mensaje" id="mensaje" placeholder="Ingrese Mensaje de Contacto" cols="60" rows="5" required="required"></textarea>
-                        <br>
+    <div class="container">
+        <div class="row">
+            <form method="post" action="procesar.php" id="formulario">
+                <div class="form-group">
+                    <label for="nombre">Nombre: </label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingresa tu nombre...">
+                </div>
+                <div class="form-group">
+                    <label for="email">Correo Electrónico: </label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Ej.: abcdefg@gmail.com">
+                </div>
+                <div class="form-group">
+                    <label for="contraseña">Contraseña: </label>
+                    <input type="contraseña" class="form-control" id="contraseña" name="contraseña" placeholder="*******">
+                </div>
+                <div class="form-group">
+                    <label for="telefono">Telefono: </label>
+                    <input type="telefono" class="form-control" id="telefono" name="telefono" placeholder="ej.: 987654321 o +56987654321">
+                </div>
+                <div class="form-group">
+                    <label for="comentario">Dejanos un comentario sobre tus intereses: </label>
+                    <input type="comentario" class="form-control" id="comentario" name="comentario" placeholder="Agrega una pequeña descripción...">
+                </div>
+                <div class="form-group">
+                    <label for="interes">Selecciona lo que más te interesa: </label>
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="orf">Orfebreria</label>
+                        </div>
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="fotos">Photografia</label>
+                        </div>
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="pinturas">pintura</label>
+                        </div>
                     </div>
-                </fieldset>
-
-                <br>
-                <div id="botones" class="mb-2">
-                    <input class="btn btn-outline-success" type="submit" value="Enviar">
-                    <input class="boton2 btn btn-outline-danger " type="reset" value="Borrar">
                 </div>
 
+                <input type="submit" class="btn btn-danger" id="enviar" value="Enviar">
+                <input type="reset" class="btn btn-primary" id="limpiar" value="Empezar denuevo">
+                <div id="error" class="alert alert-danger" role="alert"></div>
             </form>
-        </article>
-
-        <!--Footer Pagina-->
-
-        <div class="container-fluid">
-            <footer class="row">
-
-                <div class="bg-dark text-white text-center col-12 py-5">
-
-                </div>
-            </footer>
         </div>
+    </div>
+    <!-- Code injected by live-server -->
+    <script type="text/javascript">
+        // <![CDATA[  <-- For SVG support
+        if ('WebSocket' in window) {
+            (function() {
+                function refreshCSS() {
+                    var sheets = [].slice.call(document.getElementsByTagName("link"));
+                    var head = document.getElementsByTagName("head")[0];
+                    for (var i = 0; i < sheets.length; ++i) {
+                        var elem = sheets[i];
+                        var parent = elem.parentElement || head;
+                        parent.removeChild(elem);
+                        var rel = elem.rel;
+                        if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+                            var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+                            elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+                        }
+                        parent.appendChild(elem);
+                    }
+                }
+                var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+                var address = protocol + window.location.host + window.location.pathname + '/ws';
+                var socket = new WebSocket(address);
+                socket.onmessage = function(msg) {
+                    if (msg.data == 'reload') window.location.reload();
+                    else if (msg.data == 'refreshcss') refreshCSS();
+                };
+                if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+                    console.log('Live reload enabled.');
+                    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+                }
+            })();
+        } else {
+            console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+        }
+        // ]]>
+    </script>
 </body>
 
 </html>
